# Fingerprint-Recognition

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  testMain.cpp
FingerprintRecognition/: CMakeLists.txt  FingerPrintRecognition.cpp  FingerPrintRecognition.h
include/: MinutiaePoint.hpp  imageProcessing.hpp  matching.hpp
src/: MinutiaePoint.cpp  imageProcessing.cpp  matching.cpp
